refactored parser, still need to fix parenthesis precendence